@@ -50,10 +50,8 @@ public class ManeuverAnalysisIDMChampionsFinalTest extends AbstractManeuverDetec
     @Before
     public void setUp() throws URISyntaxException, IOException, InterruptedException, ParseException, SubscriberInitializationException {
         super.setUp();
-//        URI storedUri = new URI("file:///"+new File("resources/event_20110929_Internatio-Champions_Cup_Final.mtb").getCanonicalPath().replace('\\', '/'));
-//        super.setUp(new URL("file:///"+new File("resources/event_20110929_Internatio-Champions_Cup_Final.txt").getCanonicalPath()),
-        URI storedUri = new URI("http://traclive.dk/events/event_20110929_Internatio/datafiles/event_20110929_Internatio-Champions_Cup_Final.mtb");
-        super.setUp(new URL("http://traclive.dk/events/event_20110929_Internatio/event_20110929_Internatio-Champions_Cup_Final.txt"),
+        URI storedUri = new URI("file:///"+new File("resources/event_20110929_Internatio-Champions_Cup_Final.mtb").getCanonicalPath().replace('\\', '/'));
+        super.setUp(new URL("file:///"+new File("resources/event_20110929_Internatio-Champions_Cup_Final.txt").getCanonicalPath()),
                 /* liveUri */ null, /* storedUri */ storedUri,
                 new ReceiverType[] { ReceiverType.MARKPASSINGS, ReceiverType.RACECOURSE, ReceiverType.RAWPOSITIONS });
         fixApproximateMarkPositionsForWindReadOut(getTrackedRace());
